--- a/02-pm.md
+++ b/02-pm.md
@@ -4,20 +4,20 @@ _La licence utilisées pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](htt
 
 [**Revenir au Contexte**](/01-context.md)
 
-# 2.    Population Map \(PM\)
+# 2.    Population Map \(PM\), la "Carte de la Population"
 
-This is a first step to define the perimeter of a BlockChain project: what are the rights of actors for the project.
+La première étape dans la mise en place d'un projet BlockChain est la définition du périmètre : quels sont les droits de chaque acteur \(final\) du projet.
 
-## 2.1.    The Rights
+## 2.1.    Les Droits
 
-Here are listed possible rights that can be found in a BlockChain project.
+Cette section présente les différents droits possibles qui peuvent être mis en place dans un projet BlockChain.
 
-Rights are defined here for the following nodes of the network.
+Les Droits sont définis ci-dessous pour les différents noeuds du réseau :
 
-| Design | Description |
+| Elément de diagramme | Description |
 | :---: | :--- |
-| ![](/Img/SimpleNode.png) | **Simple Node** : Node not able to connect to the BC |
-| ![](/Img/OriginNode.png) | **Origin Node** : Creator of the BC _\(Naturally has admin rights\)_ |
+| ![](/Img/SimpleNode.png) | **Simple Node, ** "**Noeud Simple**" : Noeud qui n'est pas capable de se connecter à la BlockChain \(_donc noeud hors réseau_\). |
+| ![](/Img/OriginNode.png) | **Origin Node, ** "Noeud d'Origine" : Créateur de la BlockChain \(_possède naturellement les droits admin_\). |
 | ![](/Img/Admin.png) | **Admin** : Can give and revoke to anyone the rights : issue, mine, activate, admin, connect, send receive |
 | ![](/Img/Activator.png) | **Activator** : Can give and revoke to anyone the rights : connect, send, receive |
 | ![](/Img/Miner.png) | **Miner** : Node processing blocks of the BC |
