--- a/02-pm.md
+++ b/02-pm.md
@@ -18,9 +18,9 @@ Les Droits sont définis ci-dessous pour les différents noeuds du réseau :
 | :---: | :--- |
 | ![](/Img/SimpleNode.png) | **Simple Node, ** "**Noeud Simple**" : Noeud qui n'est pas capable de se connecter à la BlockChain \(_donc noeud hors réseau_\). |
 | ![](/Img/OriginNode.png) | **Origin Node, ** "Noeud d'Origine" : Créateur de la BlockChain \(_possède naturellement les droits admin_\). |
-| ![](/Img/Admin.png) | **Admin** : Can give and revoke to anyone the rights : issue, mine, activate, admin, connect, send receive |
-| ![](/Img/Activator.png) | **Activator** : Can give and revoke to anyone the rights : connect, send, receive |
-| ![](/Img/Miner.png) | **Miner** : Node processing blocks of the BC |
+| ![](/Img/Admin.png) | **Admin** : Peut donner et retirer, à n'importe qui, les droits : issue, mine, activate, admin, connect, send et receive |
+| ![](/Img/Activator.png) | **Activator, ** "Activateur" : Peut donner et retirer, à n'importe qui, les droits : connect, send, receive |
+| ![](/Img/Miner.png) | **Miner, ** "Mineur" : Node processing blocks of the BC |
 | ![](/Img/Connect.png) | **Connect** : Node able to connect to the BC |
 | ![](/Img/Send.png) | **Send** : Node able to send new transaction to the BC _\(Necessarily able to connect\)_ |
 | ![](/Img/Receive.png) | **Receive** : Node able to receive transaction in the BC _\(Necessarily able to connect\)_ |
