--- a/02-pm.md
+++ b/02-pm.md
@@ -16,15 +16,15 @@ Les Droits sont définis ci-dessous pour les différents noeuds du réseau :
 
 | Elément de diagramme | Description |
 | :---: | :--- |
-| ![](/Img/SimpleNode.png) | **Simple Node, ** "**Noeud Simple**" : Noeud qui n'est pas capable de se connecter à la BlockChain \(_donc noeud hors réseau_\). |
-| ![](/Img/OriginNode.png) | **Origin Node, ** "Noeud d'Origine" : Créateur de la BlockChain \(_possède naturellement les droits admin_\). |
-| ![](/Img/Admin.png) | **Admin** : Peut donner et retirer, à n'importe qui, les droits : issue, mine, activate, admin, connect, send et receive |
-| ![](/Img/Activator.png) | **Activator, ** "Activateur" : Peut donner et retirer, à n'importe qui, les droits : connect, send, receive |
-| ![](/Img/Miner.png) | **Miner, ** "Mineur" : Node processing blocks of the BC |
-| ![](/Img/Connect.png) | **Connect** : Node able to connect to the BC |
-| ![](/Img/Send.png) | **Send** : Node able to send new transaction to the BC _\(Necessarily able to connect\)_ |
-| ![](/Img/Receive.png) | **Receive** : Node able to receive transaction in the BC _\(Necessarily able to connect\)_ |
-| ![](/Img/Issue.png) | **Issue** : Node able to create new asset in the BC _\(Necessarily able to connect and receive\)_ |
+| ![](/Img/SimpleNode.png) | **Simple Node**,  "Noeud Simple" : Noeud qui n'est pas capable de se connecter à la BlockChain \(_donc noeud hors réseau_\). |
+| ![](/Img/OriginNode.png) | **Origin Node**, "Noeud d'Origine" : Créateur de la BlockChain \(_possède naturellement les droits admin_\). |
+| ![](/Img/Admin.png) | **Admin** : Peut donner et retirer, à n'importe qui, les droits : issue, mine, activate, admin, connect, send et receive. |
+| ![](/Img/Activator.png) | **Activator**, "Activateur" : Peut donner et retirer, à n'importe qui, les droits : connect, send, receive. |
+| ![](/Img/Miner.png) | **Miner**, "Mineur" : Noeud qui gère la création de blocks dans le BlockChain. |
+| ![](/Img/Connect.png) | **Connect**, "Connection" : Noeud ayant le droit de se connecter à la BlockChain. |
+| ![](/Img/Send.png) | **Send**, "Envoi" : Noeud ayant la possibilité d'envoyer de nouvelles transactions dans la BlockChain _\(possède implicitement le droit de se connecter\)_ |
+| ![](/Img/Receive.png) | **Receive**, "Reception" : Noeud ayant la possibilité de recevoir des transactions dans la BlockChain _\(possède implicitement le droit de se connecter\)_ |
+| ![](/Img/Issue.png) | **Issue** : Noeud ayant le droit de créer de nouveaux Assets dans la BlockChain _\(possède implicitement le droit d'envoi et de réception\)_ |
 
 ## 2.2.    Library use case PM
 
