--- a/02-pm.md
+++ b/02-pm.md
@@ -26,21 +26,21 @@ Les Droits sont définis ci-dessous pour les différents noeuds du réseau :
 | ![](/Img/Receive.png) | **Receive**, "Reception" : Noeud ayant la possibilité de recevoir des transactions dans la BlockChain _\(possède implicitement le droit de se connecter\)_ |
 | ![](/Img/Issue.png) | **Issue** : Noeud ayant le droit de créer de nouveaux Assets dans la BlockChain _\(possède implicitement le droit d'envoi et de réception\)_ |
 
-## 2.2.    Library use case PM
+## 2.2.    Le diagramme PM pour le use case Bibliothèque
 
-In the Library use case, there are 4 kinds of actors:
+Dans le cas de la Bibliothèque, on peut trouver 4 types d'acteurs :
 
-* The _Central Library_
+* _Central Library_ : La _Bibliothèque Centrale_
 
-* The others _Libraries_
+* _Libraries_ : Les _Biblitohèques Secondaires_
 
-* The _Readers_
+* _Readers_ : Les _Lecteurs_
 
-* Other _Actors _\(not linked to library system\)
+* _Others_ : Les Autres _Acteurs_ \(non reliés au système de Bibliothèques\)
 
-All the rights can be represented by the next figure:
+L'ensemble des droits peuvent être représentés par la figure suivante :
 
-![](/Img/PM-Library-Ext.png)_**Figure 2-1 - Population Map - Library - extented**_
+![](/Img/PM-Library-Ext.png)_**Figure 2-1 - Population Map - Bibliothèque - étendu**_
 
 Let’s take again each actor with their rights:
 
