--- a/02-pm.md
+++ b/02-pm.md
@@ -42,92 +42,92 @@ L'ensemble des droits peuvent être représentés par la figure suivante :
 
 ![](/Img/PM-Library-Ext.png)_**Figure 2-1 - Population Map - Bibliothèque - étendu**_
 
-Let’s take again each actor with their rights:
+Reassons en revue les droits de chaque acteur :
 
-* The _Central Library_:
+* La _Bibliothèque Centrale_ :
 
-  * It is the BlockChain **Creator**
-  * It has **Admin** rights on the BlockChain
-  * It has **Activation** rights on the BlockChain
-  * It is a **Miner**
-  * It can **Connect** to the BlockChain
-  * It can **Send** transactions in the BlockChain
-  * It can **Receive** transactions in the BlockChain
-  * It can **Issue** in the BlockChain
+  * C'est le **Créateur** de la BlockChain
+  * Il a les droits **Admin** sur la BlockChain
+  * Il a les droits **Activateur** sur la BlockChain
+  * C'est un **Mineur**
+  * Il peut se **Connecter** à la BlockChain
+  * Il peut **Envoyer** des transactions sur la BlockChain
+  * Il peut **Recevoir** des transactions sur la BlockChain
+  * Il a le droit d'**Issue**, c'est à dire de créer de nouveaux Assets dans la BlockChain
 
-* The others _Libraries_:
+* Les autres _Bibliothèques_ :
 
-  * They have **Activation** rights on the BlockChain
-  * They are a **Miner**
-  * They can **Connect** to the BlockChain
-  * They can **Send** transactions in the BlockChain
-  * They can **Receive** transactions in the BlockChain
+  * Ils ont le droit **Activateur** sur la BlockChain
+  * Ils sont **Mineurs**
+  * Ils peuvent se **Connecter** à la BlockChain
+  * Ils peuvent **Envoyer** des transactions sur la BlockChain
+  * Ils peuvent **Recevoir** des transactions sur la BlockChain
 
-* The _Readers_:
+* Les _Lecteurs_ :
 
-  * They can **Connect** to the BlockChain
-  * They can **Send** transactions in the BlockChain
-  * They can **Receive** transactions in the BlockChain
+  * Ils peuvent se **Connecter** à la BlockChain
+  * Ils peuvent **Envoyer** des travsaction sur la BlockChain
+  * Ils peuvent **Recevoir** des transactions sur la BlockChain
 
-* Other _Actors_ \(not linked to library system\):
+* Les autres _Acteurs _ \(non rattaché au système de la Bibliothèque\):
 
-  * They cannot connect!!! Then they cannot read information.
+  * Ils ne peuvent se connecter !!! Ils ne peuvent donc pas lire les informations.
 
-But in this list, a few rights are redundant.
+Dans cette liste, il y a plusieurs droits qui sont redondants.
 
-If you are able to write in a BlockChain, then you inevitably have the right to connect. Similary, the creator of a BlockChain has Admin and Activation Rights.
+Si on est en mesure d'écrire dans la BlockChain, alors on a, inévitablement, le droit de se connecter à la BlockChain. De façon similaire, un créateur de BlockChain a les droits Admin et Activation.
 
-_Notice: it’s a good way to keep highlighted status rights, process right and business rights._
+_Note: c'est un bon moyen de mettre en avant les rôles, les acteurs techniques, les acteurs métier._
 
-Then the list can be reduced in:
+La liste peut donc être réduite de la façon suivante :
 
-* The _Central Library_:
 
-  * It is the BlockChain **Creator**
-  * It is a **Miner**
-  * It can **Send** transactions in the BlockChain
-  * It can **Receive** transactions in the BlockChain
-  * It can **Issue** in the BlockChain
 
-* The others _Libraries_:
+* La _Bibliothèque Centrale_ :
 
-  * They have **Activation** rights on the BlockChain
-  * They are a **Miner**
-  * They can **Send** transactions in the BlockChain
-  * They can **Receive** transactions in the BlockChain
+  * C'est le **Créateur** de la BlockChain
+  * C'est un **Mineur**
+  * Il peut **Envoyer** des transactions sur la BlockChain
+  * Il peut **Recevoir** des transactions sur la BlockChain
+  * Il a le droit d'**Issue**, c'est à dire de créer de nouveaux Assets dans la BlockChain
 
-* The _Readers_:
+* Les autres _Bibliothèques_ :
 
-  * They can **Send** transactions in the BlockChain
-  * They can **Receive** transactions in the BlockChain
+  * Ils ont le droit **Activateur** sur la BlockChain
+  * Ils sont **Mineurs**
+  * Ils peuvent **Envoyer** des transactions sur la BlockChain
+  * Ils peuvent **Recevoir** des transactions sur la BlockChain
 
-* Other _Actors_ \(not linked to library system\):
+* Les _Lecteurs_ :
 
-  * They cannot connect!!! Then they cannot read information.
+  * Ils peuvent **Envoyer** des travsaction sur la BlockChain
+  * Ils peuvent **Recevoir** des transactions sur la BlockChain
 
-Thus, the rights can be represented by a compact version of the figure:
+* Les autres _Acteurs _ \(non rattaché au système de la Bibliothèque\):
 
-![](/Img/PM-Library-Compact.png)_**Figure 2-2 - Population Map - Library - Compact**_
+  * Ils ne peuvent se connecter !!! Ils ne peuvent donc pas lire les informations.
 
-## 2.3.    Forum use case PM
+Les droits peuvent, donc, être représentés dans la version compacte de la figure suivante :
 
-In the Forum use case, there are 4 kinds of people:
+![](/Img/PM-Library-Compact.png)_**Figure 2-2 - Population Map - Bibliothèque - Compacte**_
 
-* The _Creator of the forum_
+## 2.3.    Diagramme PM pour le use case Forum
 
-* The _Editors_ \(with the right to create new topics\)
+Dans la cas du Forum, il y a 4 types de personnes :
 
-* The _Subscribed Readers_
+* Le _Créateur_ du _Forum_
 
-* The \(Simple\) _Readers_
+* Les _Editeurs_ \(qui ont le droit de créer de nouveaux sujets\)
 
-All the rights can be represented by the next figure:
+* Les _Lecteurs Abonnés_
+
+* Les \(Simples\) _Lecteurs_
+
+L'ensemble des droits peuvent être représentés par la figure suivante :
 
 ![](/Img/PM-Forum.png)_**Figure 2-3 - PM - Forum**_
 
-The figure represents the compact version of the Population Map \(PM\).
-
-The rights are defined following rules to show another aspect of rights.
+La figure représente la version compacte de la Population Map \(PM\).
 
 The list of rights is the following one:
 
