--- a/02-pm.md
+++ b/02-pm.md
@@ -81,27 +81,25 @@ _Note: c'est un bon moyen de mettre en avant les rôles, les acteurs techniques,
 
 La liste peut donc être réduite de la façon suivante :
 
-
-
 * La _Bibliothèque Centrale_ :
 
-  * C'est le **Créateur** de la BlockChain
-  * C'est un **Mineur**
-  * Il peut **Envoyer** des transactions sur la BlockChain
-  * Il peut **Recevoir** des transactions sur la BlockChain
-  * Il a le droit d'**Issue**, c'est à dire de créer de nouveaux Assets dans la BlockChain
+  * C'est le **Créateur** de la BlockChain;
+  * C'est un **Mineur**;
+  * Il peut **Envoyer** des transactions sur la BlockChain;
+  * Il peut **Recevoir** des transactions sur la BlockChain;
+  * Il a le droit d'**Issue**, c'est à dire de créer de nouveaux Assets dans la BlockChain.
 
 * Les autres _Bibliothèques_ :
 
-  * Ils ont le droit **Activateur** sur la BlockChain
-  * Ils sont **Mineurs**
-  * Ils peuvent **Envoyer** des transactions sur la BlockChain
-  * Ils peuvent **Recevoir** des transactions sur la BlockChain
+  * Ils ont le droit **Activateur** sur la BlockChain;
+  * Ils sont **Mineurs**;
+  * Ils peuvent **Envoyer** des transactions sur la BlockChain;
+  * Ils peuvent **Recevoir** des transactions sur la BlockChain.
 
 * Les _Lecteurs_ :
 
-  * Ils peuvent **Envoyer** des travsaction sur la BlockChain
-  * Ils peuvent **Recevoir** des transactions sur la BlockChain
+  * Ils peuvent **Envoyer** des travsaction sur la BlockChain;
+  * Ils peuvent **Recevoir** des transactions sur la BlockChain.
 
 * Les autres _Acteurs _ \(non rattaché au système de la Bibliothèque\):
 
@@ -129,34 +127,34 @@ L'ensemble des droits peuvent être représentés par la figure suivante :
 
 La figure représente la version compacte de la Population Map \(PM\).
 
-The list of rights is the following one:
+La liste des droits est la suivante :
 
-* The _Creator_ of the forum:
-  * It is the BlockChain **Creator**
-  * It is a **Miner**
-  * It can **Send** transactions in the BlockChain
-  * It can **Receive** transactions in the BlockChain
-  * It can **Issue** in the BlockChain
-  * It can **Receive** on another address.
+* Le _Créateur_ du forum :
+  * C'est le **Créateur** de la BlockChain;
+  * Il ets **Mineur**;
+  * Il peut **Envoyer** des transactions dans la BlockChain;
+  * Il peut **Recevoir** des transactions dans la BlockChain;
+  * Il a le droit d'**Issue** dans la BlockChain;
+  * Il peut **Recevoir** en utilisant une autre adresse.
 
-_Notice: The forum has a wall, an editorial line. A specific address is created just to receive the posts. It is possible to imagine that editors could have their own address and that the forum would have then few editorial lines. In fact, technically, if you can receive transactions then you can create your own editorial line. Note that, above all, the Forum Creator is represented with two statuses: one is full of rights, it is its user status; the other one can only receive rights, it is the editorial line._
+_Note : Le Forum possède un mur, une "ligne éditoriale". Une adresse spécifique est crée à ce titre, pour recevoir toutes les publications. On peut imaginer que chaque éditeur possède sa propre adresse de publication et que le forum possède ainsi plusieurs lignes éditoriales. En fait, techniquement, si une adresse peut recevoir des transactions alors elle peut servir de ligne éditoriale. Il faut noter, avant tout, que le Créateur du Forum est représenté par deux status : le premier possède tous les droits \(ce sont ses droits utilisateurs\); le second ne peut que recevoir des transactions \(c'est la ligne éditoriale\)._
 
-_Notice: An address with only “receive” right can be considered like a publication wall \(a discussion later compare transactions and streams for this use case\)._
+_Note : Une adresse qui ne peut que recevoir peut être considérée comme un mur de publication \(une discussion ultérieure compare l'utilisation des transactions à l'utilisation des streams\)._
 
-* The _Editors_ \(having rights to create new topics\):
+* Les _Editeurs_ \(qui ont le droit de créer de nouveau sujets\) :
 
-  * It can **Send** transactions in the BlockChain
-  * It can **Receive** transactions in the BlockChain
-  * It can **Issue** in the BlockChain
+  * Ils peuvent **Envoyer** des transactions dans la BlockChain;
+  * Ils peuvent **Recevoir** des transaction dans le BlockChain;
+  * Ils ont le droit d'**Issue** dans la BlockChain.
 
-* The _Subscribed Readers_:
+* Les Lecteurs Abonnés :
 
-  * They can **Send** transactions in the BlockChain
-  * They can **Receive** transactions in the BlockChain
+  * Ils peuvent **Envoyer** des transactions dans la BlockChain;
+  * Ils peuvent **Recevoir** des transaction dans le BlockChain.
 
-* The \(Simple\) _Readers_:
+* Les \(simples\) Lecteurs :
 
-  * They can **Connect** and then read \(and only read, the posts.
+  * Ils peuvent se Connecter et lire \(seulement lire\) les publications.
 
 ## 2.4.    Particular case: Multi-Signature
 
