--- a/02-pm.md
+++ b/02-pm.md
@@ -156,35 +156,37 @@ _Note : Une adresse qui ne peut que recevoir peut être considérée comme un mu
 
   * Ils peuvent se Connecter et lire \(seulement lire\) les publications.
 
-## 2.4.    Particular case: Multi-Signature
+## 2.4.    Cas particulier : Multi-Signature
 
-In few cases, it can appear necessary to use multisign addresses. A multisign address is an address which can be signed by \(p\) different pub keys and which has to be signed by \(s\) signatures. Then, a multisign address is noticed with \(s x p\) to inform that \(s\) signatures are needed in the \(p\) possible pub keys.
+Dans plusieurs cas, il peut apparaître le besoin d'utiliser une adresse multisignée. Une adresse multisignée est une adresse qui peut être signée par \(p\) clés publiques différentes et qui doit être signée par \(s\) signatures. Ainsi, une adresse multisignée est notée avec \(s x p\) pour informer du nombre \(s\) de signatures nécessaires parmi les \(p\) clés publiques possibles.
 
-In Population Map, this is represented with a new box and the signature format.
+Dans le diagramme Population Map, un cadre supplémentaire rejoint les personnes pouvant signer et une information indique le format de la signature.
 
 ![](/Img/PM-MultiSig.png)
 
-_**Figure 2-4- PM – MultiSign Addresses**_
+_**Figure 2-4- PM – Adresse MultiSignée**_
 
-In this figure, there are two addresses shared by Alice and Bob:
+Dans cette figure, deux adresses sont partagées par Alice et Bob :
 
-•    the first can send transactions only with one signature \(Alice’s signature or Bob’s signature\),
+•    la première signature n'a besoin que d'une signature pour envoyer des transactions \(soit la signature d'Alice, soit celle de Bob\);
 
-•    the second to send transactions need two signatures \(Alice’s signature and Bob’s signature\)
+•    La seconde signature a besoin de deux signatures pour envoyer des transactions \(la signature d'Alice et celle de Bob\)
 
-_Notice that few screens have to be used when there are different crossed multisign addresses: when one address is 3 x 6 and, in the same use case, another is 4 x 5, and another is … The goal of the Population is to be clear, then different screens can be used to represent the population._
+_Note : Plusieurs diagrammes peuvent être utilisés quand plusieurs adresses multisignées se croisent, par exempe : quand une adresse est en 3 x 6 et une autre adresse en 4 x 5, et une autre ... Le principe du diagramme Polupation Map est de clarifier la situation des différents acteurs, plusieurs diagrammes peuvent donc être utilisés pour conserver la clareté dans la représentation de la population._
 
-## 2.5.    Particular case: Import of Private Key
+## 2.5.    Cas particulier : Import de Clé Privée
 
-In few cases, it can appear necessary to import the private key of a wallet from to another one. Then the second one receives all the rights of the first one and can act as the first one. It has to be done with a lot of precautions.
+Dans certains cas, il peut s'avérer nécessaire d'importer la clé privée d'un wallet dans un autre wallet. Le second wallet reçoit ainsi tous les droits du premier et peut agir comme s'il était le premier. C'est une fonctionnalité à utiliser avec beaucoup de prudence.
 
-In PM, this is represented with a simple arrow.
+Dans le diagramme PM, cela se représente pas une simple flèche.
 
-Figure 5- PM - Import of Private Key
+![](/Img/PM-ImportPrK.png)
 
-In this figure, Bob can create an Issue in the BlockChain and Alice cannot do it directly, but Alice has the control of a Bob’s wallet address, then Alice can create an Issue using Bob’s rights on this address.
+_**Figure 2-5- PM - Import de Clé Privée**_
 
-Technically, it means that Alice imported the private key of one of Bob’s addresses.
+Dans cette figure, Bob a le droit d'Issue dans la BlockChain alors qu'Alice n'en a pas directement le droit, mais Alice a le contrôle sur une adresse du Wallet de Bob, Alice a, ainsi, le droit d'Issue en utilisant les droits de l'adresse de Bob.
 
-[**Go to Global Architecture**](/03-ga.md)
+Techniquement, cela signifie qu'Alice a importé la clé privée de l'adresse de Bob.
+
+[**Aller à l'Architecture Globale**](/03-ga.md)
 
