--- a/03-ga.md
+++ b/03-ga.md
@@ -21,17 +21,21 @@ Trouvez ci-dessous les éléments qui permettent de définir l'architecture gloa
 
 ## 3.2.    Le diagramme GA pour le uase case Bibliothèque
 
-In the Library use case, the libraries have an interest to be directly connected to the BlockChain.
+Dans le cas de la Bibliothèque, chaque Bibliothèque a un intérêt à être directement connecté à la BlockChain.
 
-_Readers_ don’t have to install or configure anything to use the system. Then a Web Gate has to be implemented to let them use the service. Another reason of the gate is the lack of interest for _Readers_ to possess all the data. Regarding Population Map, _Others_ don’t have any right to connect to the BlockChain, and then the Web Gate needs to have a restricted access.
+Les _Lecteurs_ n'ont, par contre, aucune raison de devoir installer ou configurer quoique ce soit sur leur système. Il est donc nécessaire de mettre en place un portail qui leur permet d'accéder au service. Une autre raison de mettre en place le portail est le manque d'intérêt pour les _Lecteurs_ de posséder toutes les données de la BlockChain.
 
-In complement of the Population Map, batches are necessary to create and send delay-related mail to _Readers_ for example or manage the books to send from a library to another one.
+_Note : la mise en place d'un wallet "léger", c'est-à-dire ne possédant que les transactions propres au wallet, peut être présenter comme un service externe. Toutes les BlockChain ne le proposent pas._
+
+Les _Autres_ présentés dans le diagramme Population Map n'ont pas le droit de se connecter à la BlockChain, le portail mis en place doit donc posséder un accès limité.
+
+En plus des acteurs présentés dans le diagramme PM, la mise en palce de batches-scripts peut être nécessaire \(pour créer et envoyer des notifications de retard par mail aux _Lecteurs_ par exemple ou pour gérer les listes de livres devant être envoyés d'une _Bibliothèque_ à l'autre\).
 
 ![](/Img/GA-Library.png)
 
-_**Figure 3-1 – GA - Library**_
+_**Figure 3-1 – GA - Bibliothèque**_
 
-The figure represents the 3 nodes with rights inside the BlockChain. The interfaces of _Central Library \(CL\) and Libraries \(L\)_ are directly connected to the BlockChain. _Readers_ use a Web Gate to communicate with the BlockChain. Batches are using the _Central Library_’s address to access to the BlockChain.
+La figure pésente les 3 noeuds ayant des droits d'action sur la BlockChain. La _Bibliothèque Centrale_ \(CL\) et les _Bibliothèques_ secondaires \(L\) sont directement connectées à la BlockChain. Les _Lecteurs_ utilisent un portail pour communiquer avec la BlockChain. Les Batches utilisent l'adresse de la Bibliothèque Centrale pour accéder à la BlockChain.
 
 ## 3.3.    Forum use case GA
 
