--- a/03-ga.md
+++ b/03-ga.md
@@ -37,45 +37,45 @@ _**Figure 3-1 – GA - Bibliothèque**_
 
 La figure pésente les 3 noeuds ayant des droits d'action sur la BlockChain. La _Bibliothèque Centrale_ \(CL\) et les _Bibliothèques_ secondaires \(L\) sont directement connectées à la BlockChain. Les _Lecteurs_ utilisent un portail pour communiquer avec la BlockChain. Les Batches utilisent l'adresse de la Bibliothèque Centrale pour accéder à la BlockChain.
 
-## 3.3.    Forum use case GA
+## 3.3.    Diagramme GA pour le use case Forum
 
-The goal of the Forum is to discard all the web tools. Except to send and receive information in using transactions, there are no specific cases to identify. The goal of the forum which is a wall of publications is to maintain it completely open to everyone.
+Le but du Forum est de se séparer de tout outil web habituel \(gardons en tête que la BlockChain reste synchronisée par le réseau\). Mis à part l'envoi et la réception de transactions, il n'y a aucun cas particulier à identifier. Le Forum possède un mur de publication qui a pour finalité de rester ouvert à la lecture à tous.
 
 ![](/Img/GA-Forum.png)
 
 _**Figure 3-2 - GA - Forum**_
 
-## 3.4.    Particular case: Batch & SmartContract
+## 3.4.    Cas particuliers : Batches & SmartContract
 
-A _Batch_ is considered like an external service. It is located on a device and it uses an address present in a wallet. The wallet is owned by an actor of the BlockChain who can be distinctly identified, the address can be a multi-Signature address.
+Un _Batch_ est considéré comme un service extérieur. Il est positionné à l'extérieur de la BlockChain et il utilise l'adresse présente sur un wallet de la BlockChain. Le wallet appartient à un acteur de la BlockChain qui peut être clairement identifié, même dans le cas d'une adresse multisignée.
 
 ![](/Img/GA-Batch.png)
 
 _**Figure 3-3 - GA - Batch**_
 
-A SmartContract is a script in the middle of the BlockChain. Publish a SmartContract in the BlockChain returns the address of the SmartContract in the BlockChain. A SmartContract can be represented like a simple address with a label to indicate it is a SmartContract.
+Un _SmartContract_ est un "script" positionné au milieu de la BlockChain. Publier un _SmartContract_ dans la BlockChain renvoie l'adresse du _SmartContract_ dans la BlockChain. Un _SmartContract_ peut donc être représenté comme une somple adresse avec un libellé pour indiquer qu'il s'agit d'un _SmartContract_.
 
 ![](/Img/GA-SC.png)
 
 _**Figure 3-4 - GA - SmartContract**_
 
-_Notice that Global Architecture is done to only represent the architecture. The content of the Batch or the SmartContract has not to be defined by this diagram._
+_Note : le diagramme GA a pour but finalité de donner une représentation de l'architecture. Le contenu, au sens algorithmique, du Batch ou du SmartContract n'ont pas à être défini par ce diagramme._
 
 ## 3.4.    Particular case: Multi-Signature
 
-In the particular of multiSig addresses the Global Architecture allows to define explicitly the related pub keys.
+Dans le cas particulier des adresses multisignées, le diagramme GA permet de définir ou redéfinir explicitement les clés publiques concernées.
 
 ![](/Img/GA-MultiSig.png)
 
 _**Figure 3-5 - GA - MultiSig**_
 
-In the figure Alice uses one address with one multiSig address \(M1\) and her other address with the other multiSig address \(M2\).
+La figure illustre qu'Alice utilise une de ces adresses pour signer les transactions d'une adresse multisignée \(M1\) et son autre adresse pour signer les transactions effectuer avec l'autre adresse multisignée \(M2\).
 
-Labels are added to the multiSig addresses to distinguish them later just in using this label.
+Les libellés, ajoutés au niveaux des adresses mutlisignées, permettent de les distinguer ultérieurement.
 
 ## 3.6.    Particular case: Channels
 
-A few BlockChains define Channels like closed parts of a BlockChain. Man can give special rights to users in a channel and other rights in another channel. Never a Channel can be inclued in another one. In Global Architecture, it can be then represented like different BlockChain, each BlockChain with its own rights.
+Plusieurs BlockChans définissent des Canaux comme des parties fermées d'une BlockChain. On peut donner des droits particuliers à un Canal et donner d'autres droits à un autre. Jamais un Canal n'est inclus dans un autre Canal. Dans le diagramme GA, cela peut être représenté comme différentes BlockChain, chaque BlockChain avec ses propres droits.
 
 [**Go to Unit Definition**](/04-ud.md)
 
