--- a/02-pm.md
+++ b/02-pm.md
@@ -2,7 +2,7 @@ _La licence utilisées pour tous les articles MoBlo est_ [_CC BY-NC-ND 4.0_](htt
 
 [**Revenir à l'Introduction**](/README.md)
 
-[**Revenir au Contexte**](/01-context.md)
+[**Revenir au Contexte**](/01-contexte.md)
 
 # 2.    Population Map \(PM\), la "Carte de la Population"
 
