--- a/03-ga.md
+++ b/03-ga.md
@@ -77,5 +77,5 @@ Les libellés, ajoutés au niveaux des adresses mutlisignées, permettent de les
 
 Plusieurs BlockChans définissent des Canaux comme des parties fermées d'une BlockChain. On peut donner des droits particuliers à un Canal et donner d'autres droits à un autre. Jamais un Canal n'est inclus dans un autre Canal. Dans le diagramme GA, cela peut être représenté comme différentes BlockChain, chaque BlockChain avec ses propres droits.
 
-[**Go to Unit Definition**](/04-ud.md)
+[**Revenir au diagramme de Unit Definition**](/04-ud.md)
 
