--- a/05-bt.md
+++ b/05-bt.md
@@ -28,41 +28,45 @@ Dans le cas d'une transaction depuis une adresse MultiSignée, l'origine de la t
 
 L'identification des transactions prend son importance quand un sens tient dans une successions de transactions, le flux de transactions peut être ainsi identifié. On n'écrit plus _tz_, mais _t1_, _t2_, _t3_, ...
 
-## 5.2.    Library use case BT
+## 5.2.    Le diagramme BT pour le use case Bibliothèque
 
-The Library use case presents a lot of possible transactions.
+La use case Bibliothèque présente un grand nombre de transactions possibles.
 
 ![](/Img/BT-Library-SignUp.png)
 
-_**Figure 5-3 - BT - Library - Sign Up**_
+_**Figure 5-3 - BT - Bibliothèque - Inscription**_
 
-_Readers_ use a Web Gate to access to the Information System. Then, when a new _Reader_ wants to sign up, he uses the Web Gate. Here the arrow is dotted to indicate that it is not a BlockChain transaction. The modelization of such a transaction can be useful to completely describe the use case and remind the importance of the Web Gate.
+Les _Lecteurs_ utilisent une un portail Web pour accéder au système d'information. Ainsi, quand un nouveau _Lecteur_ souhaite s'enregistrer, il peut utiliser le portail Web. Dans la figure qui précède, la flèche est en pointillés pour indiquer qu'il ne s'agit pas d'une transaction de la BlockChain mais d'une action extérieure. La modélisation de telles transaction peut être utile pour décrire complètement le use case et rappeler l'importance du portail Web.
 
 ![](/Img/BT-Library-Distrib.png)
 
-_**Figure 5-4 - BT - Library - Distribution**_
+_**Figure 5-4 - BT - Bibliothèque - Distribution**_
 
-The _Central Library_ creates the _Assets_ and the units of _Asset_. When, in the real life, the book is sent to a _Library \(L\)_, the _Central Library \(CL\)_ has to send a unit of the _Asset_ to the _Library_.
+La _Bibliothèque Centrale \(CL\)_ crée des _Assets_ et les unités d'_Asset_. Quand, dans la vraie vie, un livre est envoyé dans une _Bibliothèque \(L\)_, la _Bibliothèque Central \(CL\)_ doit envoyer l'unité d'_Asset_ à la _Bibliothèque \(L\)_.
 
 ![](/Img/BT-Library-Central.png)
 
-_**Figure 5-5 - BT - Library - Centralisation**_
+_**Figure 5-5 - BT - Bibliothèque - Centralisation**_
+
+Les livres peuvent être rendus dans n'importe quelle _Bibliothèque_. Ainsi une _Bibliothèque_ peut stocker, à un moment donné, plusieurs copies d'un même livre. Les livres doivent donc être envoyé à la _Bibliothèque Centrale_.
+
+La réservation d'un livre particulier peut aussi être la raison d'un tel envoi, par exemple si un livre n'est disponible qu'en un seul exemplaire. Si quelqu'un souhaite le lire, alors le livre doit être transférer d'une _Bibliothèque_ à une autre en passant par la _Bibliothèque Centrale_.
 
 Books can be returned in any library. Then a library can stored many copies of the same book. The books have to be sent to the _Central Library_.
 
-The booking of a particular book can be a reason too. A book is available in only one copy. If someone wants to read it, the book has to be transferred from a Library to another one passing by _Central Library_.
+Quoiqu'il en soit, la BlockChain indique où est situé le livre disponible.
 
-Anyway, the BlockChain indicates where the available books are located.
+La transaction précédente est similaire à la centralisation, sauf que, dans ce cas-ci, le livre est envoyé de la _Bibliothèque \(L\)_ à la _Bibliothèque Centrale \(CL\)_.
 
 ![](/Img/BT-Library-Loaning.png)
 
-_**Figure 5-6 - BT - Library - Loaning**_
+_**Figure 5-6 - BT - Bibliothèque - Emprunt**_
 
-A _Reader \(R\)_ can borrow a book. The book is then taken from a Library \(_Central Library_ or other _Library_\) and sent to the _Reader_. The transaction can carry the End Date of the loan.
+Un _Lecteur_ \(R\) peut emprunter un livre. Le livre est alors pris de la _Bibliothèque_ \(_Bibliothèque Centrale CL_ ou une autre _Bibliothèque L_\) et envoyé au _Lecteur_. La transaction peut porter des informations comme la date de fin de l'emprunt.
 
 ![](/Img/BT-Library-Return.png)
 
-_**Figure 5-7 - BT - Library - Return**_
+_**Figure 5-7 - BT - Bibliothèque - Retour**_
 
 The simple cycle of book can be ended with the case of the return. A _Reader_ returns a book, and the unit is sent back to the _Library_.
 
@@ -70,7 +74,7 @@ At this point, the system is a ledger which allows to know where a book is locat
 
 ![](/Img/BT-Library-Booking.png)
 
-_**Figure 5-8 - BT - Library - Booking**_
+_**Figure 5-8 - BT - Bibliothèque - Booking**_
 
 Here is a sequential use case, where transactions have a related number to indicate the order which has to be followed.
 
@@ -86,7 +90,7 @@ Notice that the first step of _Booking_ is done after using Web Gate. A business
 
 ![](/Img/BT-Library-Delay.png)
 
-_**Figure 5-9 - BT - Library - Delay**_
+_**Figure 5-9 - BT - Bibliothèque - Delay**_
 
 The last part of the use case is the _Delay_ in book return. Transactions are created by the batches which are using the _Central Library_ address based on loaning information. When a book is loaned, the end date is specified, the system easily allows to find Books loaned by _Readers_ out of End Date.
 
