--- a/05-bt.md
+++ b/05-bt.md
@@ -68,25 +68,25 @@ Un _Lecteur_ \(R\) peut emprunter un livre. Le livre est alors pris de la _Bibli
 
 _**Figure 5-7 - BT - Bibliothèque - Retour**_
 
-The simple cycle of book can be ended with the case of the return. A _Reader_ returns a book, and the unit is sent back to the _Library_.
+Le cycle simple d'un emprunt de livre prend fin avec le retour du livre. Un _Lecteur_ retourne un livre, l'unité \(représentant le livre\) est renvoyée à la _Bibliothèque_ où le livre est rendu.
 
-At this point, the system is a ledger which allows to know where a book is located.
+A ce niveau-ci de la description, le système est un livre de compte qui permet de savoir, à tout moment, où un livre est situé.
 
 ![](/Img/BT-Library-Booking.png)
 
-_**Figure 5-8 - BT - Bibliothèque - Booking**_
+_**Figure 5-8 - BT - Bibliothèque - Réservation**_
 
-Here is a sequential use case, where transactions have a related number to indicate the order which has to be followed.
+La figure qui précède est séquentielle, les transactions sont numéroté de façon à indiquer l'ordre qui doit être suivi.
 
-The _Booking_ allows the _Readers_ to ask for a specific book in a specific library. Remind that _Readers_ can only use the Web Gate and only the Central Library can create _Assets_ and _Asset_ units.
+La Réservation d'un livre permet à un _Lecteur_ de demander un livre particulier dans une _Bibliothèque_ particulière. Il faut garder en mémoire que le Lecteur ne peut utiliser que le Portail Web et seule la _Bibliothèque Central \(CL\)_ peut créer des _Assets_ et des unités d'_Asset_.
 
-The _Reader \(R\)_ asks for a book using the Web Gate. One unit of the _Asset Booking \(K\)_ is sent from the _Central Library_ to the destination _Library \(L\)_ asked by the _Reader_. The transaction carries on information about the _Booking_ \(book reference, destination library …\)
+Le _Lecteur \(R\)_ effectue sa demande de réservation en utilisant le Portail Web. Une unité de l'_Asset Réservation \(K\)_ est envoyée de la _Bibliothèque Centrale \(CL\)_ jusqu'à la _Bibliothèque \(L\)_ destination demandée par le Lecteur. La transaction porte les informations à propos de la _Réservation_ \(référence de livre, bibliothèque de destination, ...\).
 
-Now the system knows that the book is waited in a particular _Library_. The first case is “The book is already in the library”, and then there is nothing to do. The second case is “The book is only available in another library” and then batches take care to return the book to _Central Library_ and then distribute it to the destination _Library_.
+A présent, le système sait que le livre est attendu dans une _Bibliothèque_ en particulier. Soit "Le livre est déjà dans la Bibliothèque" et il n'y a rien à faire. Soit "Le livre est disponible dans une autre Bibliothèque" alors les batches doivent gérer l'envoi la centralisation du livre vers la Bibliothèque Centrale puis la distribution vers la Bibliothèque destination.
 
-When the book is available in the destination library, this _Library_ sends the unit of _Booking_ to the _Reader_ to notify him that the book is waiting for him in the _Library_. At the end, when the Reader comes to loan the book, the unit of _Booking_ is returned to _Central Library_.
+Quand lie livre est disponible dans la Bibliothèque destination, cette _Bibliothèque \(L\)_ envoie l'unité de _Réservation \(K\)_ au _Lecteur \(R\)_ pour lui notifier que le livre l'attend à la _Bibliothèque_. A la fin, lorsque le _Lecteur \(R\)_ vient pour emprunter le livre, l'unité de _Réservation \(K\)_ est renvoyée à la _Bibliothèque Centrale \(CL\)_.
 
-Notice that the first step of _Booking_ is done after using Web Gate. A business part has to be implemented. In this part, a rule can specify how many _Bookings_ can be done by the same _Reader_ at the same time. But, this rule doesn’t appear in this BlockChain modelization.
+Il faut noter que la première étape de la _Réservation_ est fait vie le Portail Web. Il y a donc une partie métier à implémenter dans le Portail Web. Dans cette partie, une règle peut spécifier le nombre de _Réservation_ qu'un même _Lecteur_ peut faire au même moment. Mais, cette règle n'apparaît pas dans la modélisation BlockChain.
 
 ![](/Img/BT-Library-Delay.png)
 
