--- a/05-bt.md
+++ b/05-bt.md
@@ -90,15 +90,15 @@ Il faut noter que la première étape de la _Réservation_ est fait vie le Porta
 
 ![](/Img/BT-Library-Delay.png)
 
-_**Figure 5-9 - BT - Bibliothèque - Delay**_
+_**Figure 5-9 - BT - Bibliothèque - Retard**_
 
-The last part of the use case is the _Delay_ in book return. Transactions are created by the batches which are using the _Central Library_ address based on loaning information. When a book is loaned, the end date is specified, the system easily allows to find Books loaned by _Readers_ out of End Date.
+La dernière partie du cas est la gestion des _Retards_ dans le retour des livres. Les transactions sont créées par les batches qui utilisent l'adresse de la _Bibliothèque Centrale \(CL\)_ sur la base des informations de réservation. Quand un livre est réservé, la date de fin est spécifiée, le système peut aisément la retrouver et donc retrouver les livres empruntés pour lesquels la date est dépassée.
 
-In this case, one unit of _Delay_ is sent to the _Reader \(R\)_ from the _Central Library \(CL\)_ with a reference on the book out of date.
+Dans ce cas, une unité de _Retard \(D\)_ est envoyée au _Lecteur \(R\)_ depuis la _Bibliothèque Centrale \(CL\)_ avec une référence sur le livre qui est en retard.
 
-When the _Reader_ returns the book, he sends to the _Library_ the unit of _Book_ and the unit of _Delay_.
+Quand le _Lecteur \(R\)_ ramène le livre, il envoie à la _Bibliothèque \(CL/L\)_ l'unité du _Livre \(B\)_ et l'unité de _Retard \(R\)_.
 
-## 5.3.    Forum use case BT
+## 5.3.    Le diagramme BT pour le use case BT
 
 Forum is a simplest use case limited to two cases: open a new subject and comment an existing subject.
 
