--- a/05-bt.md
+++ b/05-bt.md
@@ -100,25 +100,27 @@ Quand le _Lecteur \(R\)_ ramène le livre, il envoie à la _Bibliothèque \(CL/L
 
 ## 5.3.    Le diagramme BT pour le use case BT
 
-Forum is a simplest use case limited to two cases: open a new subject and comment an existing subject.
+Le Forum est un cas beaucoup plus simple limité à deux possibilités : création d'un nouveau sujet et envoi d'un commentaire sur un sujet existant.
 
 ![](/Img/BT-Forum-NewSubj.png)
 
-_**Figure 5-10 - BT - Forum - New Subject**_
+_**Figure 5-10 - BT - Forum - Nouveau Sujet**_
 
-The creation of a new subject is defined by the creation of a new _Asset_. It can be done by the _Forum Creator \(FC\)_ or an _Editor \(E\)_. When a new subject is opened, the _Publisher_ creates a new _Asset \(Sni\)_ and sends one unit of the _Asset_ to the _Publication Wall_. The transaction carries on the publication which can be read anyone able to connect to the BlockChain.
+La création d'un nouveau sujet est défini par la création d'un nouvel _Asset_. Cela peut être fait par le _Créateur du Forum \(FC\)_ ou un _Editeur \(E\)_. Quand un un nouveau sujet est ouvert, la personne qui publie crée un nouvel _Asset \(Sni\)_ et envoie une unité de l'_Asset_ sur le _Mur de Publication_. La transaction porte le contenu de la publication qui peut être lu par toute personne ayant la possibilité de se connecter à la BlockChain.
 
 ![](/Img/BT-Forum-Comment.png)
 
-_**Figure 5-11 - BT - Forum - Comment**_
+_**Figure 5-11 - BT - Forum - Commentaire**_
 
-The _Creator_ of an _Asset_ is the owner of this _Asset_. He is then the only one able to create new units of the _Asset_.
+Le _Créateur_ d'un _Asset_ est le propriétaire de cet _Asset_. Il est donc le seul à pouvoir créer de nouvelles unités de cet _Asset_.
 
-In the Forum use case, the interest is to track Subjects and comments on the Subjects. For that, the same _Assets_ are used to create the subject and comment it. To comment a publication, people need to ask one unit of the _Asset_ to the _Creator_ of the publication.
+Dans cas du Forum, l'intérêt est de suivre lesSujets et les Commentaires sur les Sujets. C'est pour cette raison qu'un même _Asset_ sont utilisés pour le Sujet les Commentaires sur le Sujet. Pour commenter une publication, les personnes ont besoin de demander une unité de l'_Asset_ au _Créateur_ de la publication.
 
-_Someone \(P\)_ who wants to comment create a transaction only with data. The data indicates what is the Subject to be commented is and what is the transaction to be commented. The transaction is sent to the address of the _Creator of the Subject \(FC/E\)_.
+Une _Personne \(P\)_ qui souhaite commenter crée une transaction ne contenant que des données. Ces données indiquent quel est le _Sujet_ qui sera commenté ainsi que la transaction précise qui sera commentée. La transaction est envoyée à l'adresse du _Créateur du Sujet \(FC/E\)_.
 
-If the _Creator_ of the _Subject_ decides to allow the comment, then he sends to _\(P\)_ one unit of the _Asset_ referencing the transaction used to ask this unit.
+Si le Créateur du Sujet décide d'autoriser le commentaire, il envoie à _\(P\)_ une unité de l'_Asset_ référencée dans la demande de commentaire.
+
+A la fin, _\(P\)_ peut envoyer son commentaire sur le _Mur de Publication_ en utilisant l'unité d'_Asset_, en référençant la transaction à commenter et en donnant son commentaire.
 
 At the end, _\(P\)_ can send his comment to the _Publication Wall_ using the unit of _Asset_, referencing the transaction to comment and giving his comment.
 
