--- a/05-bt.md
+++ b/05-bt.md
@@ -124,5 +124,5 @@ A la fin, _\(P\)_ peut envoyer son commentaire sur le _Mur de Publication_ en ut
 
 At the end, _\(P\)_ can send his comment to the _Publication Wall_ using the unit of _Asset_, referencing the transaction to comment and giving his comment.
 
-[**Go to Conclusion**](/06-conclusion.md)
+[**Aller à la Conclusion**](/06-conclusion.md)
 
