--- a/04-ud.md
+++ b/04-ud.md
@@ -51,5 +51,5 @@ Un nouveau sujet peut être créé par le _Créateur du Forum_ ou n'importe quel
 
 Le use case est présenté ici dans un "monde parfait". On pourrait imaginer des _Assets_ supplémentaires comme "_Warning_" ou "_Information_". Le cas est donc limité à la publication de sujets sans qualification particulière.
 
-[**Go to Business Transactions**](/05-bt.md)
+[**Aller au diagramme Business Transactions**](/05-bt.md)
 
